--- a/src/app/components/solisala/solisala.component.html
+++ b/src/app/components/solisala/solisala.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <form style="margin: 3em" [formGroup]="form">
   <div class="form-row">
     <div class="form-group col-md-6">
