--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,34 +1,24 @@
 <div class="jumbotron">
   <div class="padre">
-
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    
-    <div class="d-flex flex-wrap mt-20" style = "justify-content: space-around; margin-top: 2em">
-        
-        <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
-            <div class="card-header">Solicitudes recibidas</div>
-            <div class="card-body">
-              <h5 class="card-title">Primary card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div class="izquierda">
+      <h1>UNIVERSIDAD LIBRE :D</h1>
+      <img src="../../../assets/unilibre.png" alt="">
+    </div>
+    <div class="derecha">
+        <div class="login">
+        <form class="form">
+          <h2>Inicio de sesión</h2>
+            <div class="form-group form">
+              <label for="exampleInputEmail1">Correo</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa correo">  
             </div>
-          </div>
-          <div class="card text-white bg-success mb-3" style="max-width: 19rem;">
-              <div class="card-header">Solicitudes aceptadas</div>
-              <div class="card-body">
-                <h5 class="card-title">Secondary card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Contraseña</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresa contraseña">
             </div>
-            <div class="card text-white bg-danger mb-3" style="max-width: 19rem;">
-                <div class="card-header">Solicitudes rechazadas</div>
-                <div class="card-body">
-                  <h5 class="card-title">Success card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-            </div>
-              
+            <button type="submit" class="btn btn-primary">Ingresar</button>
+          </form>
+        </div>
+    </div>
+  </div>            
 </div>
