--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,40 @@
 .padre{
-    max-width: 1200px;
+    width: 100%;
     margin: auto;
+    display: flex;
+    height: 100%;
+}
+.jumbotron{
+    height: 100vh;
+    padding: 0;
+}
+.izquierda, .derecha{
+    display: flex;
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.izquierda {
+    background-color: rgb(255, 255, 255);
+    flex-direction: column;
+}
+.derecha {
+    background-color: rgb(177, 0, 0);
+    display: flex;
+    background-image: url("../../../assets/fondologi.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.login
+{
+    display: flex;
+    justify-content: center;
+    height: 40%;
+    width: 50%;
+    background-color: rgba(182, 168, 196, 0.664);
+    border-radius: 5%;
+}
+.form{
+    align-self: center;
 }
