Interfaces login y lista de peticiones

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,24 +1,22 @@
 <div class="jumbotron">
   <div class="padre">
     <div class="izquierda">
-      <h1>UNIVERSIDAD LIBRE :D</h1>
-      <img src="../../../assets/unilibre.png" alt="">
+      <img class="unilibre" src="../../../assets/UniversidadLibre.png">
+      <img class="escudo" src="../../../assets/unilibre.png" alt="">
     </div>
     <div class="derecha">
-        <div class="login">
         <form class="form">
-          <h2>Inicio de sesión</h2>
+          <h2 class="h2 f">Inicio de sesión</h2>
             <div class="form-group form">
-              <label for="exampleInputEmail1">Correo</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa correo">  
+              <label class="f" for="exampleInputEmail1">Correo</label>
+              <input type="email" class="form-control g" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa correo">  
             </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Contraseña</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingresa contraseña">
+            <div class="form-group f">
+              <label class="f" for="exampleInputPassword1">Contraseña</label>
+              <input type="password" class="form-control g" id="exampleInputPassword1" placeholder="Ingresa contraseña">
             </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button type="submit" class="btn btn-primary boton f">Ingresar</button>
           </form>
-        </div>
     </div>
   </div>            
 </div>
