--- a/src/app/components/solisala/solisala.component.html
+++ b/src/app/components/solisala/solisala.component.html
@@ -107,5 +107,5 @@
     </div>
 </div>
   
-  <button type="submit" class="btn btn-primary">Solicitar</button>
+  <button type="submit" class="btn btn-primary boton boton">Solicitar</button>
 </form>
