--- a/src/app/components/responder-peticiones/responder-peticiones.component.html
+++ b/src/app/components/responder-peticiones/responder-peticiones.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<app-ResponderPeticionesComponent></app-ResponderPeticionesComponent>
+<app-ListaPeticionesComponent></app-ListaPeticionesComponent>
+
 <div class="padre">
   <div class="lista">
  <table class="table">
@@ -9,7 +10,7 @@
       <th scope="col">Fecha solicitada</th>
       <th scope="col">Asignatura</th>
       <th scope="col">Docente</th>
-      <th scope="col">Estado</th>
+      <th scope="col">Aceptar/Rechazar</th>
     </tr>
   </thead>
   <tbody>
@@ -18,12 +19,11 @@
       <td>{{option.FechaPedida}}</td>
       <td>{{option.Asignatura}}</td>
       <td>{{option.Docente}}</td>
-      <td>{{option.Estado}}</td>
+      <td><button type="button" class="btn btn-success">Aceptar</button>
+        <button type="button" class="btn btn-danger">Rechazar</button></td>
     </tr>
 
   </tbody>
 </table>
   </div>
 </div>
-
-
