Arreglos en traida de componentes

--- a/src/app/components/responderpeticiones/responder-peticiones.component.html
+++ b/src/app/components/responderpeticiones/responder-peticiones.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-ListaPeticionesComponent></app-ListaPeticionesComponent>
+<app-lista-peticiones></app-lista-peticiones>
 
 <div class="padre">
   <div class="lista">
