--- a/src/app/components/listapeticiones/lista-peticiones.component.html
+++ b/src/app/components/listapeticiones/lista-peticiones.component.html
@@ -1,29 +1,3 @@
 <app-header></app-header>
-<app-responder-peticiones></app-responder-peticiones>
-<div class="padre">
-  <div class="lista">
- <table class="table">
-  <thead class="thead-dark" >
-    <tr>
-      <th scope="col">Laboratorio</th>
-      <th scope="col">Fecha solicitada</th>
-      <th scope="col">Asignatura</th>
-      <th scope="col">Docente</th>
-      <th scope="col">Estado</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr  *ngFor="let option of Peticiones">
-      <td>{{option.Laboratorio}}</td>
-      <td>{{option.FechaPedida}}</td>
-      <td>{{option.Asignatura}}</td>
-      <td>{{option.Docente}}</td>
-      <td>{{option.Estado}}</td>
-    </tr>
-
-  </tbody>
-</table>
-  </div>
-</div>
-
+<app-lista [type] = "type" [Peticiones] = "Peticiones" ></app-lista>
 
