--- a/src/app/components/responderpeticiones/responder-peticiones.component.html
+++ b/src/app/components/responderpeticiones/responder-peticiones.component.html
@@ -1,29 +1,2 @@
 <app-header></app-header>
-<app-lista-peticiones></app-lista-peticiones>
-
-<div class="padre">
-  <div class="lista">
- <table class="table">
-  <thead class="thead-dark" >
-    <tr>
-      <th scope="col">Laboratorio</th>
-      <th scope="col">Fecha solicitada</th>
-      <th scope="col">Asignatura</th>
-      <th scope="col">Docente</th>
-      <th scope="col">Aceptar/Rechazar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr  *ngFor="let option of Peticiones">
-      <td>{{option.Laboratorio}}</td>
-      <td>{{option.FechaPedida}}</td>
-      <td>{{option.Asignatura}}</td>
-      <td>{{option.Docente}}</td>
-      <td><button type="button" class="btn btn-success">Aceptar</button>
-        <button type="button" class="btn btn-danger">Rechazar</button></td>
-    </tr>
-
-  </tbody>
-</table>
-  </div>
-</div>
+<app-lista [type]="type" [Peticiones]="Peticiones"></app-lista>
