--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,17 +5,20 @@
       <img class="escudo" src="../../../assets/unilibre.png" alt="">
     </div>
     <div class="derecha">
-        <form class="form">
+        <form [formGroup]="form" class="form">
           <h2 class="h2 f">Inicio de sesión</h2>
             <div class="form-group form">
               <label class="f" for="exampleInputEmail1">Correo</label>
-              <input type="email" class="form-control g" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingresa correo">  
+              <input formControlName="Username" type="email" class="form-control g" id="exampleInputEmail1"
+                aria-describedby="emailHelp" placeholder="Ingresa correo">
             </div>
             <div class="form-group f">
               <label class="f" for="exampleInputPassword1">Contraseña</label>
-              <input type="password" class="form-control g" id="exampleInputPassword1" placeholder="Ingresa contraseña">
+              <input formControlName="Password" type="password" class="form-control g" id="exampleInputPassword1"
+                placeholder="Ingresa contraseña">
             </div>
-            <button type="submit" class="btn btn-primary boton f">Ingresar</button>
+            <button (click)="onSaveClick()" [disabled]="!form.valid" type="submit"
+              class="btn btn-primary boton f">Ingresar</button>
           </form>
     </div>
   </div>            
