--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,12 +9,12 @@
           <h2 class="h2 f">Inicio de sesión</h2>
             <div class="form-group form">
               <label class="f" for="exampleInputEmail1">Correo</label>
-              <input formControlName="Username" type="email" class="form-control g" id="exampleInputEmail1"
+              <input formControlName="username" type="email" class="form-control g" id="exampleInputEmail1"
                 aria-describedby="emailHelp" placeholder="Ingresa correo">
             </div>
             <div class="form-group f">
               <label class="f" for="exampleInputPassword1">Contraseña</label>
-              <input formControlName="Password" type="password" class="form-control g" id="exampleInputPassword1"
+              <input formControlName="password" type="password" class="form-control g" id="exampleInputPassword1"
                 placeholder="Ingresa contraseña">
             </div>
             <button (click)="onSaveClick()" [disabled]="!form.valid" type="submit"
