--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,11 +7,17 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="solisala">Inicio</a>
+      <li class="nav-item">
+        <a *ngIf = "permission != '2'" class="nav-link" routerLink="/solisala">Inicio</a>
+
       </li>
-
-
+      <li>
+        <a *ngIf="permission == '2'" class="nav-link" routerLink="/responder-peticiones">Solicitudes</a>
+    
+      </li>
+      <li>
+        <a *ngIf="permission != '2'" class="nav-link" routerLink="/lista-peticiones">Mis solicitudes</a>
+      </li>
     </ul>
     <ul class="navbar-nav" style = "margin-left: auto !important">
 
