--- a/src/app/components/lista/lista-peticiones.component.html
+++ b/src/app/components/lista/lista-peticiones.component.html
@@ -6,24 +6,34 @@
   <thead class="thead-dark" >
     <tr>
       <th scope="col">Fecha Solicitada</th>
+      <th scope="col">Título</th>
+
       <th scope="col">Estudiantes</th>
       <th scope="col">Máquinas solicitadas</th>
       <th scope="col">Docente</th>
-      <th scope="col">Estado</th>
       <th scope="col">Laboratorio</th>
+      <th scope="col">Guía</th>
+      <th scope="col">Estado</th>
+
+      <th scope="col">Acción</th>
     </tr>
   </thead>
   <tbody>
     <tr  *ngFor="let option of Peticiones">
       <td>{{option.date | date: 'dd/MM/yyyy'}}</td>
+      <td>{{option.name}}</td>
+
       <td>{{option.students}}</td>
       <td>{{option.cantmachines}}</td>
       <td>{{option.teacherid}}</td>
       <td>{{option.labid}}</td>
+      <td>{{option.guide ? 'Sí' : 'No'}}</td>
+      <td>{{(option.status == 0) ? 'En espera' : (option.status == 1) ? 'Aprobado' : 'Rechazado'}}</td>
       <td *ngIf="this.type == 'student' || this.type == 'teacher'; else aux">{{option.Estado}}</td>
       <ng-template #aux>
-        <button type="button" class="btn btn-success">Aceptar</button>
-        <button type="button" class="btn btn-danger">Rechazar</button>
+        <button *ngIf= "option.status != 2" (click) = "accept(option.id)" type="button" class="btn btn-success">Aceptar</button>
+        <button *ngIf="option.status != 2" (click)="deny(option.id)"  type=" button"
+          class="btn btn-danger">Rechazar</button>
       </ng-template>
     </tr>
   </tbody>
